# wgen

./: Cargo.toml  README.md
example/: contact.md  landing.md  manifest.toml  schedule.md
example/projects/: catalyst.md  llvmtoo.md  section.toml  wgen.md
example/tutorials/: maths.md  section.toml  toxic.md
example/tutorials/linux/: distro.md  gentoo.md  subsection.toml  tuts.md
spec/d1/: section.toml
spec/d1/s1/: subsection.toml
spec1/: manifest.toml
spec1/d2/: section.toml
spec2/: index.md  manifest.toml
spec2/d1/: section.toml
spec2/d1/s1/: subsection.toml
spec2/d1/s2/: subsection.toml
spec_1/d2/: section.toml
spec_1/d2/s1/: subsection.toml
src/: discover.rs  main.rs  render.rs  spec.rs  tree.rs
src/templates/: base.html  content.html  index.html  script.js  sec_index.html  sidebar.html  style.css  sub_index.html
src/test_templates/: base.in  inherit.in  test1.in  test2.in  test3.in
