[package]
name = "wgen"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A very \"limited\" static website generator"
repository = "https://github.com/lysolaka/wgen"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
simplelog = "0.12.2"
toml = "0.9.5"
